--- a/scraping/table.html
+++ b/scraping/table.html
@@ -1,17 +1,59 @@
-<table class="style_table" cellspacing="1" border="0"><thead><tr><td class="style_td" style="text-align:center; width:40px;">ランク</td><td class="style_td" style="text-align:center; width:40px;">SP</td><td class="style_td">報酬</td><td class="style_td">既取得時</td></tr>
-</thead><tbody><tr><th class="style_th" style="text-align:center; width:40px;">E</th><td class="style_td" style="text-align:center; width:40px;">0</td><td class="style_td"></td><td class="style_td"></td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">E+</th><td class="style_td" style="text-align:center; width:40px;">5</td><td class="style_td">耀脈</td><td class="style_td"></td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">E++</th><td class="style_td" style="text-align:center; width:40px;">20</td><td class="style_td">必勝ハチマキ</td><td class="style_td"></td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">D</th><td class="style_td" style="text-align:center; width:40px;">40</td><td class="style_td">シールドグリップ</td><td class="style_td"></td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">D+</th><td class="style_td" style="text-align:center; width:40px;">60</td><td class="style_td">クレセント</td><td class="style_td">ゼラムパウダー×1</td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">D++</th><td class="style_td" style="text-align:center; width:40px;">80</td><td class="style_td">グラールリング</td><td class="style_td"></td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">C</th><td class="style_td" style="text-align:center; width:40px;">110</td><td class="style_td">スプライト</td><td class="style_td"></td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">C+</th><td class="style_td" style="text-align:center; width:40px;">140</td><td class="style_td">料理魂・パフェ</td><td class="style_td">ゼラムパウダー×1</td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">C++</th><td class="style_td" style="text-align:center; width:40px;">170</td><td class="style_td">士魂ベルト</td><td class="style_td"></td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">B</th><td class="style_td" style="text-align:center; width:40px;">200</td><td class="style_td">ネビュラス</td><td class="style_td">ゼラムカプセル×1</td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">B+</th><td class="style_td" style="text-align:center; width:40px;">230</td><td class="style_td">Loray -ロレイ-</td><td class="style_td">ゼラムカプセル×1</td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">B++</th><td class="style_td" style="text-align:center; width:40px;">260</td><td class="style_td">セキトバ</td><td class="style_td"></td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">A</th><td class="style_td" style="text-align:center; width:40px;">290</td><td class="style_td">ヘルメスギア</td><td class="style_td"></td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">AA</th><td class="style_td" style="text-align:center; width:40px;">320</td><td class="style_td">クロノアーマー</td><td class="style_td"></td></tr>
-<tr><th class="style_th" style="text-align:center; width:40px;">AAA</th><td class="style_td" style="text-align:center; width:40px;">350</td><td class="style_td">アルティウムガーヴ</td><td class="style_td"></td></tr>
-</tbody></table>
+<table align="" style="width: 100%; border: 1px solid #696969;" border="1" frame="border" rules="all" cellspacing="0" cellpadding="7">
+    <tbody>
+        <tr style="background-color: #f5cccb;" align="center" valign="middle">
+            <td>&nbsp;</td>
+            <td>近称</td>
+            <td>中称</td>
+            <td>遠称</td>
+            <td>不定称</td>
+        </tr>
+
+        <tr align="center" valign="middle">
+            <td>物事</td>
+            <td>これ</td>
+            <td>それ</td>
+            <td>あれ</td>
+            <td>どれ</td>
+        </tr>
+
+        <tr align="center" valign="middle">
+            <td>場所</td>
+            <td>ここ</td>
+            <td>そこ</td>
+            <td>あそこ</td>
+            <td>どこ</td>
+        </tr>
+
+        <tr align="center" valign="middle">
+            <td>方向</td>
+            <td><p>
+                    こちら
+                </p>
+
+                <p>
+                    こっち
+                </p></td>
+            <td><p>
+                    そちら
+                </p>
+
+                <p>
+                    そっち
+                </p></td>
+            <td><p>
+                    あちら
+                </p>
+
+                <p>
+                    あっち
+                </p></td>
+            <td><p>
+                    どちら
+                </p>
+
+                <p>
+                    どっち
+                </p></td>
+        </tr>
+    </tbody>
+</table>
