--- a/scraping/table.html
+++ b/scraping/table.html
@@ -1,59 +1,72 @@
-<table align="" style="width: 100%; border: 1px solid #696969;" border="1" frame="border" rules="all" cellspacing="0" cellpadding="7">
-    <tbody>
-        <tr style="background-color: #f5cccb;" align="center" valign="middle">
-            <td>&nbsp;</td>
-            <td>近称</td>
-            <td>中称</td>
-            <td>遠称</td>
-            <td>不定称</td>
-        </tr>
-
-        <tr align="center" valign="middle">
-            <td>物事</td>
-            <td>これ</td>
-            <td>それ</td>
-            <td>あれ</td>
-            <td>どれ</td>
-        </tr>
-
-        <tr align="center" valign="middle">
-            <td>場所</td>
-            <td>ここ</td>
-            <td>そこ</td>
-            <td>あそこ</td>
-            <td>どこ</td>
-        </tr>
-
-        <tr align="center" valign="middle">
-            <td>方向</td>
-            <td><p>
-                    こちら
-                </p>
-
-                <p>
-                    こっち
-                </p></td>
-            <td><p>
-                    そちら
-                </p>
-
-                <p>
-                    そっち
-                </p></td>
-            <td><p>
-                    あちら
-                </p>
-
-                <p>
-                    あっち
-                </p></td>
-            <td><p>
-                    どちら
-                </p>
-
-                <p>
-                    どっち
-                </p></td>
-        </tr>
-    </tbody>
+<table style="width: 100%; height: 275px;">
+<tbody>
+<tr style="height: 25px;">
+<td style="background-color: #dbdbdb; text-align: center; height: 25px;"><b>ランク</b></td>
+<td style="background-color: #dbdbdb; text-align: center; height: 25px;"><b>所持ポイント</b></td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">70～99</td>
+<td style="text-align: center; height: 25px;">150(5回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">100～</td>
+<td style="text-align: center; height: 25px;">180(6回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">200～</td>
+<td style="text-align: center; height: 25px;">210(7回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">300～</td>
+<td style="text-align: center; height: 25px;">240(8回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">400～</td>
+<td style="text-align: center; height: 25px;">270(9回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">500～</td>
+<td style="text-align: center; height: 25px;">300(10回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">600～</td>
+<td style="text-align: center; height: 25px;">330(11回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">700～</td>
+<td style="text-align: center; height: 25px;">360(12回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">800～</td>
+<td style="text-align: center; height: 25px;">390(13回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">900～</td>
+<td style="text-align: center; height: 25px;">420(14回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">1000～</td>
+<td style="text-align: center; height: 25px;">450(15回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">1100～</td>
+<td style="text-align: center; height: 25px;">480(16回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">1200～</td>
+<td style="text-align: center; height: 25px;">510(17回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">1300～</td>
+<td style="text-align: center; height: 25px;">540(18回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">1400～</td>
+<td style="text-align: center; height: 25px;">570(19回)</td>
+</tr>
+<tr style="height: 25px;">
+<td style="text-align: center; height: 25px;">1500～</td>
+<td style="text-align: center; height: 25px;">600(20回)</td>
+</tr>
+</tbody>
 </table>
