--- a/scraping/table.html
+++ b/scraping/table.html
@@ -1,72 +1,20 @@
-<table style="width: 100%; height: 275px;">
-<tbody>
-<tr style="height: 25px;">
-<td style="background-color: #dbdbdb; text-align: center; height: 25px;"><b>ランク</b></td>
-<td style="background-color: #dbdbdb; text-align: center; height: 25px;"><b>所持ポイント</b></td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">70～99</td>
-<td style="text-align: center; height: 25px;">150(5回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">100～</td>
-<td style="text-align: center; height: 25px;">180(6回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">200～</td>
-<td style="text-align: center; height: 25px;">210(7回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">300～</td>
-<td style="text-align: center; height: 25px;">240(8回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">400～</td>
-<td style="text-align: center; height: 25px;">270(9回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">500～</td>
-<td style="text-align: center; height: 25px;">300(10回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">600～</td>
-<td style="text-align: center; height: 25px;">330(11回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">700～</td>
-<td style="text-align: center; height: 25px;">360(12回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">800～</td>
-<td style="text-align: center; height: 25px;">390(13回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">900～</td>
-<td style="text-align: center; height: 25px;">420(14回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">1000～</td>
-<td style="text-align: center; height: 25px;">450(15回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">1100～</td>
-<td style="text-align: center; height: 25px;">480(16回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">1200～</td>
-<td style="text-align: center; height: 25px;">510(17回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">1300～</td>
-<td style="text-align: center; height: 25px;">540(18回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">1400～</td>
-<td style="text-align: center; height: 25px;">570(19回)</td>
-</tr>
-<tr style="height: 25px;">
-<td style="text-align: center; height: 25px;">1500～</td>
-<td style="text-align: center; height: 25px;">600(20回)</td>
-</tr>
-</tbody>
-</table>
+<table class="style_table" cellspacing="1" border="0"><thead><tr><td class="style_td" style="width:90px;">名前</td><td class="style_td" colspan="2" style="text-align:center;">属性</td><td class="style_td" style="width:350px;">効果</td><td class="style_td" style="width:150px;">入手方法</td></tr>
+</thead><tbody><tr><th class="style_th" style="width:90px;">精神1</th><td class="style_td" style="text-align:center; width:26px;">幻2</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;">ATS+6</td><td class="style_td" style="width:150px;">合成：幻50(第I部 2/27~)</td></tr>
+<tr><th class="style_th" style="width:90px;">精神2</th><td class="style_td" style="text-align:center; width:26px;">幻4</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;">ATS+12</td><td class="style_td" style="width:150px;">合成：幻150(断章~)</td></tr>
+<tr><th class="style_th" style="width:90px;">精神3</th><td class="style_td" style="text-align:center; width:26px;">幻6</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;">ATS+24</td><td class="style_td" style="width:150px;">合成：幻450(第III部 3/21~)</td></tr>
+<tr><th class="style_th" style="width:90px;">妨害1</th><td class="style_td" style="text-align:center; width:26px;">幻2</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;">通常攻撃・クラフト時、確率15%で駆動解除&amp;遅延10</td><td class="style_td" style="width:150px;">合成：幻50(第I部 2/27~)</td></tr>
+<tr><th class="style_th" style="width:90px;">妨害2</th><td class="style_td" style="text-align:center; width:26px;">幻4</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;">通常攻撃・クラフト時、確率30%で駆動解除&amp;遅延10</td><td class="style_td" style="width:150px;">合成：幻150(断章~)</td></tr>
+<tr><th class="style_th" style="width:90px;">妨害3</th><td class="style_td" style="text-align:center; width:26px;">幻6</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;">通常攻撃・クラフト時、確率45%で駆動解除&amp;遅延10</td><td class="style_td" style="width:150px;">合成：幻450(第III部 3/21~)</td></tr>
+<tr><th class="style_th" style="width:90px;">銀耀珠</th><td class="style_td" style="text-align:center; width:26px;">幻8</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;">ATS+24 / 通常攻撃・クラフト時、確率45%で駆動解除&amp;遅延10</td><td class="style_td" style="width:150px;">アチーブメント：全てのアーツプラグインを入手</td></tr>
+<tr><th class="style_th" style="width:90px;">恐怖の刃</th><td class="style_td" style="text-align:center; width:26px;">幻3</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;"><span style="color:#c00">ウェポン・EXTRAライン専用</span><br class="spacer">STR+3<br class="spacer">通常攻撃・クラフト時に確率10%で「恐怖」</td><td class="style_td" style="width:150px;">合成：幻200(断章~)</td></tr>
+<tr><th class="style_th" style="width:90px;">恐怖の刃II</th><td class="style_td" style="text-align:center; width:26px;">幻5</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;"><span style="color:#c00">ウェポン・EXTRAライン専用</span><br class="spacer">STR+6<br class="spacer">通常攻撃・クラフト時に確率20%で「恐怖」</td><td class="style_td" style="width:150px;">合成：幻600(第III部 3/21~)</td></tr>
+<tr><th class="style_th" style="width:90px;">月霊の詩</th><td class="style_td" style="text-align:center; width:26px;">幻3</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;"><span style="color:#c00">ドライブ・EXTRAライン専用</span><br class="spacer">ATS+5 / 幻属性アーツ硬直時間2/3</td><td class="style_td" style="width:150px;">合成：幻200(断章~)</td></tr>
+<tr><th class="style_th" style="width:90px;">朧月の詩</th><td class="style_td" style="text-align:center; width:26px;">幻5</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;"><span style="color:#c00">ドライブ・EXTRAライン専用</span><br class="spacer">ATS+10 / 幻属性アーツ硬直時間1/2</td><td class="style_td" style="width:150px;">合成：幻600(第III部 3/21~)</td></tr>
+<tr><th class="style_th" style="width:90px;">銀晶の輪</th><td class="style_td" style="text-align:center; width:26px;">幻3</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;"><span style="color:#c00">シールド・EXTRAライン専用</span><br class="spacer">最大HP+150 / ピンチ時に1ターン「ステルス」</td><td class="style_td" style="width:150px;">合成：幻200(断章~)</td></tr>
+<tr><th class="style_th" style="width:90px;">白銀の輪</th><td class="style_td" style="text-align:center; width:26px;">幻5</td><td class="style_td" style="text-align:center; width:26px;"></td><td class="style_td" style="width:350px;"><span style="color:#c00">シールド・EXTRAライン専用</span><br class="spacer">最大HP+600 / ピンチ時に2ターン「ステルス」</td><td class="style_td" style="width:150px;">合成：幻600(第III部 3/21~)</td></tr>
+<tr><th class="style_th" style="width:90px;">空蝉</th><td class="style_td" style="text-align:center; width:26px;">幻4</td><td class="style_td" style="text-align:center; width:26px;">水2</td><td class="style_td" style="width:350px;">コマンドバトル中、確率90%で敵から狙われにくくなる</td><td class="style_td" style="width:150px;">アチーブメント：フィールドバトルでジャスト回避を100回決める<br class="spacer">合成：水200幻500(第III部D 3/22~)</td></tr>
+<tr><th class="style_th" style="width:90px;">隠者</th><td class="style_td" style="text-align:center; width:26px;">幻5</td><td class="style_td" style="text-align:center; width:26px;">水3</td><td class="style_td" style="width:350px;">コマンドバトル中、HP最大時クリティカル+10%</td><td class="style_td" style="width:150px;">アチーブメント：全ての導力ロックのかかった宝箱を開ける<br class="spacer">合成：水300幻750(最終幕~)</td></tr>
+<tr><th class="style_th" style="width:90px;">カーバンクル</th><td class="style_td" style="text-align:center; width:26px;">幻5</td><td class="style_td" style="text-align:center; width:26px;">火3</td><td class="style_td" style="width:350px;">確率20%で魔法ダメージを吸収</td><td class="style_td" style="width:150px;">アチーブメント：タクティカルボーナスを×4.0以上にする</td></tr>
+<tr><th class="style_th" style="width:90px;">ハクタク</th><td class="style_td" style="text-align:center; width:26px;">幻6</td><td class="style_td" style="text-align:center; width:26px;">空4</td><td class="style_td" style="width:350px;">ATボーナスの発生率90%アップ</td><td class="style_td" style="width:150px;">アチーブメント：4spgを30件解決</td></tr>
+<tr><th class="style_th" style="width:90px;">タマモ</th><td class="style_td" style="text-align:center; width:26px;">幻7</td><td class="style_td" style="text-align:center; width:26px;">時5</td><td class="style_td" style="width:350px;">攻撃を受けた時、低確率で「ステルス」</td><td class="style_td" style="width:150px;">アチーブメント：全てのポータルを発見</td></tr>
+</tbody></table>
