--- a/stock/attention2/konami.html
+++ b/stock/attention2/konami.html
@@ -10,5 +10,7 @@
 <img src="candlestick_long.png" />
 <img src="candlestick_202510.png" />
 <img src="candlestick_202406.png" />
+<img src="candlestick_adx.png" />
+<img src="candlestick_1h.png" />
 </body>
 </html>
