--- a/stock/attention/appier.html
+++ b/stock/attention/appier.html
@@ -8,5 +8,6 @@
 <img src="candlestick2.png" />
 <img src="candlestick3.png" />
 <img src="candlestick_long.png" />
+<img src="candlestick_atr.png" />
 </body>
 </html>
