--- a/stock/attention2/konami.html
+++ b/stock/attention2/konami.html
@@ -12,5 +12,6 @@
 <img src="candlestick_202406.png" />
 <img src="candlestick_adx.png" />
 <img src="candlestick_1h.png" />
+<img src="candlestick_atr.png" />
 </body>
 </html>
